# distributed-inference-sever

./: .gitpod.yml  DEMO.md  Dockerfile.gateway  Dockerfile.worker  GLOBAL_PLAN.md  README.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: demo.yml
configs/: pace_ice_deployment.yaml  prometheus.yml
demo/: app.js  index.html  style.css
docs/: ARCHITECTURE.md  COMPUTE_MEMORY_ANALYSIS.md  DETAILED_SYSTEM_DESIGN.md  DISAGGREGATED_ARCHITECTURE.md  DISAGGREGATED_FLOW.md  HIGH_REUSE_CACHE_STRATEGY.md  IMPLEMENTATION_PLAN.md  REALISTIC_CACHE_STRATEGY.md  ROUTING_ALGORITHMS.md  SCALING_GUIDE.md  TECHNICAL_INTERVIEW_GUIDE.md
scripts/: deploy_pace_ice.py  start_demo.sh  start_system.sh  stop_system.sh  test_system.sh
src/: __init__.py
src/cache/: __init__.py  infiniband_transfer.py  metadata_sync.py  registry.py  transfer.py
src/common/: __init__.py  metrics.py  models.py  prefix_hasher.py
src/distributed_inference_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gateway/: __init__.py  disaggregated_coordinator.py  production_server.py  routing_engine.py  worker_client.py
src/workers/: __init__.py  decode_worker.py  manager.py  prefill_worker.py  vllm_worker.py
tests/: test_complete_system.py  test_disaggregated_system.py  test_end_to_end_integration.py  test_infiniband_integration.py  test_worker_client.py  test_worker_client_simple.py
tests/unit/: test_cache_registry.py  test_cache_registry_simple.py  test_models.py  test_prefix_hasher.py  (+3 more)
