[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-inference-server"
version = "0.1.0"
description = "High-performance distributed LLM inference server with KV cache routing"
authors = [
    {name = "Distributed Inference Team"}
]
readme = "GLOBAL_PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0", 
    "aioredis>=2.0.0",
    "msgpack>=1.0.0",
    "asyncio-throttle>=1.0.0",
    "aiofiles>=23.0.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
    "lz4>=4.3.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0", 
    "mypy>=1.6.0",
    "flake8>=6.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true